--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projetos sapatos</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
     </head>
     <body>
         <!-- Cabeçalho -->
